--- a/.github/workflows/lw-build-iac.yml
+++ b/.github/workflows/lw-build-iac.yml
@@ -28,8 +28,8 @@ jobs:
              # Required if you are not mounting the volume on /app
              echo "WORKSPACE=src" >> env.list
              # if we want to fail the step for any critical failed findings (violations) in the assessment scan
-             echo "EXIT_FLAG=Critical=1" >> env.list 
-             docker run --env-file env.list -v "$(pwd):/app/src" lacework/codesec-iac:latest
+             echo "EXIT_FLAG=critical=1" >> env.list 
+             docker run --env-file env.list -v "$(pwd):/src" lacework/codesec-iac:latest
         env:
           LW_ACCOUNT: ${{ secrets.LW_ACCOUNT }}
           LW_API_KEY: ${{ secrets.LW_API_KEY }}
