--- a/.github/workflows/lw-build-iac.yml
+++ b/.github/workflows/lw-build-iac.yml
@@ -31,6 +31,6 @@ jobs:
              echo "EXIT_FLAG=critical=1" >> env.list 
              docker run --env-file env.list -v "$(pwd):/src" lacework/codesec-iac:latest
         env:
-          LW_ACCOUNT: ${{ secrets.LW_ACCOUNT }}
+          LW_ACCOUNT: ${{ vars.LW_ACCOUNT }}
           LW_API_KEY: ${{ secrets.LW_API_KEY }}
           LW_API_SECRET: ${{ secrets.LW_API_SECRET }}
