--- a/.github/workflows/lw-build-iac.yml
+++ b/.github/workflows/lw-build-iac.yml
@@ -29,7 +29,7 @@ jobs:
              echo "WORKSPACE=src" >> env.list
              # if we want to fail the step for any critical failed findings (violations) in the assessment scan
              echo "EXIT_FLAG=critical=1" >> env.list 
-             docker run --env-file env.list -v "$(pwd):/app/src" --user runner lacework/codesec-iac:latest
+             docker run --env-file env.list -v "$(pwd):/app/src" --user root lacework/codesec-iac:latest
         env:
           LW_ACCOUNT: ${{ vars.LW_ACCOUNT }}
           LW_API_KEY: ${{ secrets.LW_API_KEY }}
